fix(tests): fixing test execution through github action runners

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -3,7 +3,7 @@ on: [pull_request]
 
 jobs:
   tests:
-    runs-on: [ self-hosted ]
+    runs-on: [ default ]
     services:
       mariadb:
         image: mariadb:latest
