--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,3 @@
 # These owners will be the default owners for everything in
 # the repo. Unless a later match takes precedence,
-*                       @cloudoperators/Administrators
-/ @drochow @MR2011
+*                       @drochow @MR2011
