--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -3,7 +3,7 @@ on: [pull_request]
 
 jobs:
   tests:
-    runs-on: [ self-hosted ]
+    runs-on: [ default ]
     services:
       mariadb:
         image: mariadb:latest
@@ -33,4 +33,4 @@ jobs:
           DB_PORT: 3306
           DB_SCHEMA: internal/database/mariadb/init/schema.sql
           LOCAL_TEST_DB: true
-        run: ginkgo -r -randomize-all -randomize-suites --repeat 5
+        run: ginkgo -r -randomize-all -randomize-suites
