fix(compose): fixed docker compose for local environment setup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,6 +42,7 @@ services:
       DB_ROOT_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
       DB_SCHEMA: /app_sqlschema/schema.sql
+      SEED_MODE: ${SEED_MODE}
     volumes:
       - ./internal/database/mariadb/init/schema.sql:/app_sqlschema/schema.sql
     depends_on:
