--- a/.github/workflows/license.yaml
+++ b/.github/workflows/license.yaml
@@ -15,18 +15,20 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Check License Header
         uses: apache/skywalking-eyes/header@v0.6.0
         with:
-            config: .github/licenserc.yaml
-            mode: fix
+          config: .github/licenserc.yaml
+          mode: fix
 
       - name: Apply Changes
         uses: EndBug/add-and-commit@v9
         env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-            author_name: License Bot
-            author_email: license_bot@github.com
-            message: 'Automatic application of license header'
+          author_name: License Bot
+          author_email: license_bot@github.com
+          message: 'Automatic application of license header'
