--- a/.test.env
+++ b/.test.env
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2024 SAP SE or an SAP affiliate company and Greenhouse contributors
+# SPDX-License-Identifier: Apache-2.0
+
 DB_USER=my_username
 DB_PASSWORD=my_password
 DB_ROOT_PASSWORD=my_password
@@ -15,3 +18,5 @@ DOCKER_CREDENTIAL_STORE=docker-credential-desktop
 LOG_PRETTY_PRINT=true
 
 LOCAL_TEST_DB=true
+
+SEED_MODE=false
