--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2024 SAP SE or an SAP affiliate company and Greenhouse contributors
+# SPDX-License-Identifier: Apache-2.0
+
 # This docker-compose file is used to run the application localy in containarized environment.
 # ensure to set .env file accordingly
 version: '3.8'
@@ -42,6 +45,7 @@ services:
       DB_ROOT_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
       DB_SCHEMA: /app_sqlschema/schema.sql
+      SEED_MODE: ${SEED_MODE}
     volumes:
       - ./internal/database/mariadb/init/schema.sql:/app_sqlschema/schema.sql
     depends_on:
