feat(api): add componentInstances to componentVersion

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -133,6 +133,8 @@ models:
         resolver: true
       issues:
         resolver: true
+      componentInstances:
+        resolver: true
   Service:
     fields:
       owners:
