feat(scans): First draft

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -191,3 +191,7 @@ models:
         resolver: true
       services:
         resolver: true
+  Scan:
+    fields:
+      users:
+        resolver: true
