chore(refactoring): made UniqueUserID plural

--- a/.test.env
+++ b/.test.env
@@ -17,6 +17,6 @@ DOCKER_CREDENTIAL_STORE=docker-credential-desktop
 
 LOG_PRETTY_PRINT=true
 
-LOCAL_TEST_DB=true
+LOCAL_TEST_DB=false
 
 SEED_MODE=false
