test: switched LOCAL_TEST_DB to true

--- a/.test.env
+++ b/.test.env
@@ -17,6 +17,6 @@ DOCKER_CREDENTIAL_STORE=docker-credential-desktop
 
 LOG_PRETTY_PRINT=true
 
-LOCAL_TEST_DB=false
+LOCAL_TEST_DB=true
 
 SEED_MODE=false
