--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -191,3 +191,13 @@ models:
         resolver: true
       services:
         resolver: true
+  ServiceFilterValue:
+    fields:
+      serviceName: 
+        resolver: true
+      uniqueUserId:
+        resolver: true
+      userName:
+        resolver: true
+      supportGroupName:
+        resolver: true
