test: fixed wrong docker image registry as default setting for local containerized tests

--- a/.test.env
+++ b/.test.env
@@ -11,7 +11,7 @@ DB_SCHEMA=internal/database/mariadb/init/schema.sql
 
 DB_CONTAINER_IMAGE=mariadb:latest
 
-DOCKER_IMAGE_REGISTRY=hub.docker.com
+DOCKER_IMAGE_REGISTRY=index.docker.io
 
 DOCKER_CREDENTIAL_STORE=docker-credential-desktop
 
