feat(authN): Implement Token Based Authentication (#83)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,6 +45,8 @@ services:
       DB_NAME: ${DB_NAME}
       DB_SCHEMA: /app_sqlschema/schema.sql
       SEED_MODE: ${SEED_MODE}
+      AUTH_TYPE: token
+      AUTH_TOKEN_MAP: '{"testscanner":"xxx", "someotherscanner":"yyy"}'
     volumes:
       - ./internal/database/mariadb/init/schema.sql:/app_sqlschema/schema.sql
     depends_on:
