--- a/charts/heureka/templates/ingress.yaml
+++ b/charts/heureka/templates/ingress.yaml
@@ -7,25 +7,22 @@ metadata:
   name: {{ $fullName }}
   labels:
     {{- include "heureka.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
+    {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
-    {{- if and $.Values.global.linkerd_enabled $.Values.global.linkerd_requested }}
-    ingress.kubernetes.io/service-upstream: "true"
-    nginx.ingress.kubernetes.io/service-upstream: "true"
-    {{- end }}
   {{- end }}
 spec:
-{{- if .Values.ingress.tls }}
+  {{- if .Values.ingress.tls }}
   tls:
   {{- range .Values.ingress.tls }}
     - hosts:
-      {{- range .hosts }}
+    {{- range .hosts }}
         - {{ . | quote }}
-      {{- end }}
+    {{- end }}
       secretName: {{ .secretName }}
   {{- end }}
-{{- end }}
+  {{- end }}
+  ingressClassName: nginx
   rules:
   {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
