--- a/.github/workflows/build_images.yaml
+++ b/.github/workflows/build_images.yaml
@@ -110,11 +110,12 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          provenance: false
           #  cache-from: type=gha
           #  cache-to: type=gha,mode=max
           platforms: |
             linux/amd64
-        #    linux/arm64
+            linux/arm64
 
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
