--- a/Dockerfile.scanner-keppel
+++ b/Dockerfile.scanner-keppel
@@ -1,4 +1,4 @@
-FROM golang:1.23.0 AS builder
+FROM --platform=${BUILDPLATFORM:-linux/amd64} golang:1.23.0 AS builder
 
 WORKDIR /go/src/github.com/cloudoperators/heureka/scanner/keppel
 
@@ -6,7 +6,7 @@ WORKDIR /go/src/github.com/cloudoperators/heureka/scanner/keppel
 ADD scanner/keppel .
 RUN CGO_ENABLED=0 go build -o /go/bin/heureka-scanner-keppel main.go
 
-FROM gcr.io/distroless/static-debian12:nonroot
+FROM --platform=${BUILDPLATFORM:-linux/amd64} gcr.io/distroless/static-debian12:nonroot
 
 LABEL source_repository="https://github.com/cloudoperators/heureka"
 USER nonroot:nonroot
