feat(comp.backend): Implement filter values for component instance

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -217,3 +217,11 @@ models:
         resolver: true
       supportGroupName:
         resolver: true
+  ComponentInstanceFilterValue:
+    fields:
+      serviceName:
+        resolver: true
+      supportGroupName:
+        resolver: true
+      ccrn:
+        resolver: true
