chore(refactor): update servicename to serviceccrn throughout repo

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -209,7 +209,7 @@ models:
         resolver: true
   ServiceFilterValue:
     fields:
-      serviceName: 
+      serviceCcrn:
         resolver: true
       uniqueUserId:
         resolver: true
