--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -203,7 +203,7 @@ models:
         resolver: true
       affectedService:
         resolver: true
-      componentName:
+      componentCcrn:
         resolver: true
       supportGroupName:
         resolver: true
