chore(refactor): update supportgroup to use ccrn throughout repo

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -205,7 +205,7 @@ models:
         resolver: true
       componentCcrn:
         resolver: true
-      supportGroupName:
+      supportGroupCcrn:
         resolver: true
   ServiceFilterValue:
     fields:
@@ -215,5 +215,5 @@ models:
         resolver: true
       userName:
         resolver: true
-      supportGroupName:
+      supportGroupCcrn:
         resolver: true
