--- a/.env-devcontainer
+++ b/.env-devcontainer
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2024 SAP SE or an SAP affiliate company and Greenhouse contributors
+# SPDX-License-Identifier: Apache-2.0
+
 DB_USER=mariadb
 DB_PASSWORD=mariadb
 DB_ROOT_PASSWORD=mariadb
