feat(component): add filterValue query

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -225,3 +225,7 @@ models:
         resolver: true
       ccrn:
         resolver: true
+  ComponentFilterValue:
+    fields:
+      componentName: 
+        resolver: true
