Use string instead of boolean for SEED_MODE variable in docker-compose.yml

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       DB_SCHEMA: /app_sqlschema/schema.sql
 
 
-      SEED_MODE: true
+      SEED_MODE: "true"
       AUTH_TYPE: token
       AUTH_TOKEN_SECRET: xxx
 
