--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,6 +23,12 @@ jobs:
           go-version-file: 'go.mod'
       - name: Install Ginkgo
         run: go install github.com/onsi/ginkgo/v2/ginkgo
+      - name: Install Mockery
+        run: go install github.com/vektra/mockery/v2@v2.46.3
+      - name: Generate Gqlgen code
+        run: make gqlgen
+      - name: Generate Mockery code
+        run: make mockery
       - name: Run Tests
         env:
           DB_USER: my_username
