--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -14,15 +14,29 @@ jobs:
         security-events: write
         actions: read
         contents: read
-    uses: cloudoperators/common/.github/workflows/shared-codeql.yaml@main
-    with:
-      runs-on: "['default']"
-      language: "['go']"
-      go-check: true
-      go-version: "['1.22']"
-      node-check: false
-      # node-version : "['node']"
-      fail-fast: false  
-      # timeout: 30
-      autobuild: false
-      build_query: "make build-binary"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.22
+
+      - name: Install mockery
+        run: go install github.com/vektra/mockery/v2@v2.46.3
+
+      - name: Run shared CodeQL workflow
+        uses: cloudoperators/common/.github/workflows/shared-codeql.yaml@main
+        with:
+          runs-on: "['default']"
+          language: "['go']"
+          go-check: true
+          go-version: "['1.22']"
+          node-check: false
+          # node-version : "['node']"
+          fail-fast: false  
+          # timeout: 30
+          autobuild: false
+          build_query: "make build-binary"
