--- a/scanner/k8s-assets/Dockerfile
+++ b/scanner/k8s-assets/Dockerfile
@@ -4,7 +4,8 @@
 FROM --platform=${BUILDPLATFORM:-linux/amd64} golang:1.23.3 AS builder
 
 WORKDIR /go/src/github.com/cloudoperators/heureka/scanner/k8s-assets
-ADD ../.. .
+
+ADD . .
 RUN CGO_ENABLED=0 go build -o /go/bin/heureka-scanner-k8s-assets main.go
 
 FROM --platform=${BUILDPLATFORM:-linux/amd64} gcr.io/distroless/static-debian12:nonroot
