--- a/.github/workflows/build_images.yaml
+++ b/.github/workflows/build_images.yaml
@@ -88,6 +88,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ matrix.Imagename }}
           tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
             type=semver,pattern={{version}},prefix=v
             type=semver,pattern={{major}}.{{minor}},prefix=v
             type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }},prefix=v
@@ -97,7 +98,7 @@ jobs:
             type=schedule
             type=raw,value=${{ github.sha }}
             type=sha,enable=true,format=short,prefix=
-            type=edge,branch=master
+            type=edge,branch=main
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
