--- a/scanner/keppel/chart/keppel-scanner/templates/secrets.yaml
+++ b/scanner/keppel/chart/keppel-scanner/templates/secrets.yaml
@@ -7,4 +7,6 @@ metadata:
   name: {{ .Release.Name }}-secret
 type: Opaque
 data:
-  api_token: {{ .Values.scanner.api_token | b64enc }}
+  api_token: {{ .Values.scanner.heureka.api_token | b64enc }}
+  keppel_username: {{ .Values.scanner.keppel.username | b64enc }}
+  keppel_password: {{ .Values.scanner.keppel.password | b64enc }}
