--- a/charts/heureka/templates/secret.yaml
+++ b/charts/heureka/templates/secret.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     {{- include "heureka.labels" . | nindent 4 }}
 data: 
-  environment: {{ .Values.environment | b64enc | quote }} 
+  environment: {{ .Values.environment | b64enc | quote }}
+  mariadb-username: {{ .Values.mariadb.auth.username | b64enc }}
   mariadb-password: {{ .Values.mariadb.auth.password | b64enc }}
   mariadb-root-password: {{ .Values.mariadb.auth.rootPassword | b64enc }}
