Add ginkgo tools to devcontainer and install Golang tools we use in Makefile

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,5 +7,12 @@
         "forwardPorts": [
            80,
            "mariadb:3306"
-        ]
+		],
+		"customizations": {
+			"vscode": {
+				"extensions": [
+					"dlipovetsky.ginkgo-tools"
+				]
+			}
+		}
 }
