Use 'vscode' as username for devcontainers instead of 'gopher' to fix networking error

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "app",
 	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-	"remoteUser": "gopher",
+	"remoteUser": "vscode",
 	"postCreateCommand": "make",
         "forwardPorts": [
            80,
