feat(componentVersion): add issueCounts

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -133,6 +133,8 @@ models:
         resolver: true
       componentInstances:
         resolver: true
+      issueCounts:
+        resolver: true
   Service:
     fields:
       owners:
