--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -203,7 +203,7 @@ models:
         resolver: false
       primaryName:
         resolver: true
-      affectedService:
+      serviceCcrn:
         resolver: true
       componentCcrn:
         resolver: true
