Add resolvers for component isntance attributes
- add resolvers for component isntance attributes to be able to access api
- add e2e tests

On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -227,6 +227,16 @@ models:
         resolver: true
       ccrn:
         resolver: true
+      region:
+        resolver: true
+      cluster:
+        resolver: true
+      namespace:
+        resolver: true
+      domain:
+        resolver: true
+      project:
+        resolver: true
   ComponentFilterValue:
     fields:
       componentCcrn:
