feat(componentInstance): Add Pod and Container attributes
- Add Pod and Container attributes in componentInstance
- Add filtering of Pod and Container
- Add ordering of Pod and Container
- Add resolvers for Pod and Container
- Add e2e tests for Pod and container
- Add database tests for Pod and Container

On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -237,6 +237,10 @@ models:
         resolver: true
       project:
         resolver: true
+      pod:
+        resolver: true
+      container:
+        resolver: true
   ComponentFilterValue:
     fields:
       componentCcrn:
