feat(service): add issueCounts

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -151,6 +151,8 @@ models:
         resolver: true
       issueMatches:
         resolver: true
+      issueCounts:
+        resolver: true
   SupportGroup:
     fields:
       users:
