feat(serviceFilterValues): add user
On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -221,6 +221,8 @@ models:
         resolver: true
       supportGroupCcrn:
         resolver: true
+      user:
+        resolver: true
   ComponentInstanceFilterValue:
     fields:
       serviceCcrn:
