Add comment to clarify installation of Ginkgo Test Explorer

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,7 +5,7 @@
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
 		"ms-vscode-remote.remote-containers",
-		"joselitofilho.ginkgotestexplorer",
+		"joselitofilho.ginkgotestexplorer",  // This extensions _must_ be installed in the host VSCode instance, not the container: code --install-extension joselitofilho.ginkgotestexplorer
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
