--- a/.test.env
+++ b/.test.env
@@ -7,7 +7,7 @@ DB_ROOT_PASSWORD=my_password
 DB_NAME=heureka
 DB_ADDRESS=localhost
 DB_PORT=3306
-DB_SCHEMA=internal/database/mariadb/init/schema.sql
+#DB_SCHEMA=internal/database/mariadb/init/schema.sql
 
 DB_CONTAINER_IMAGE=mariadb:latest
 
