feat(componentInstance): add componentInstance type

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -245,6 +245,8 @@ models:
         resolver: true
       container:
         resolver: true
+      type:
+        resolver: true
   ComponentFilterValue:
     fields:
       componentCcrn:
