--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,19 +1,13 @@
 {
 	"name": "heureka & MariaDB",
-	"dockerComposeFile": "docker-compose.yml",
-	"service": "app",
+        "build": {
+          "dockerfile": "Dockerfile",
+          "context": ".."
+        },
 	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
 	"remoteUser": "vscode",
-	"postCreateCommand": "make",
+	"postStartCommand": "sudo service mariadb start && /workspaces/${localWorkspaceFolderBasename}/.devcontainer/mariadb_setup.bash && cp .testenv-devcontainer .test.env",
         "forwardPorts": [
-           80,
-           "mariadb:3306"
-		],
-		"customizations": {
-			"vscode": {
-				"extensions": [
-					"golang.Go"
-				]
-			}
-		}
+           80
+	]
 }
